Fixed section one elements sizes. They now again align with the header width

--- a/styles/index.css
+++ b/styles/index.css
@@ -58,7 +58,7 @@ a {
     text-decoration-line: none;
 }
 
-header>div {
+header .container {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -130,10 +130,10 @@ main {
 }
 
 .section-one .container-child {
-    flex: 1 1 0px;
+    flex: 1;
 }
 
-.section-one .inner-container * {
+.section-one .container-child>div *{
     max-width: 490px;
 }
 
@@ -258,8 +258,8 @@ figcaption {
     }
 }
 
-@media (max-width:500px){
-    nav ul{
+@media (max-width:500px) {
+    nav ul {
         flex-direction: column;
         gap: 1rem;
     }
